--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,6 @@ authors = ["Chris Greene <archgoon@gmail.com>"]
 
 [dependencies]
 byteorder = "1"
+serde = "1.0.89"
+serde_derive = "1.0.89"
+serde_json = "1.0"
